# musx2mscz

./: .gitignore  README.md  pyproject.toml
src/musx2mscz/: __init__.py  cli.py  converter.py  enigma.py  fonts.py  helpers.py  mscore.py  msczpost.py  musxfile.py  percussion.py  style.py
src/musx2mscz/data/: perc_note_types.json
tests/: test_units.py
