[project]
name = "musx2mscz"
version = "0.1.0"
description = "Convert Finale Notation Files (.musx) to MuseScore files (.mscz)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "lxml>=5.0",
]

[project.scripts]
musx2mscz = "musx2mscz.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/musx2mscz"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
